--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -20465,7 +20465,7 @@ button.owl-next {
 
 /*--//search--*/
 .breadcrumb-bg-about {
-  background: url(../images/banner3.jpg) no-repeat 0px 0px;
+  background: url(../images/S12.jpg) no-repeat top;
   background-size: cover;
   background-size: cover;
   position: relative;
@@ -21906,5 +21906,65 @@ h3.post-content-title {
   }
 }
 
+
+#fade {
+  display: none;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 1001;
+  -moz-opacity: 0.8;
+  opacity: .80;
+  filter: alpha(opacity=80);
+}
+
+#light {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-width: 600px;
+  max-height: 360px;
+  margin-left: -300px;
+  margin-top: -180px;
+  border: 2px solid #FFF;
+  background: #FFF;
+  z-index: 1002;
+  overflow: visible;
+}
+
+#boxclose {
+  float: right;
+  cursor: pointer;
+  color: #fff;
+  border: 1px solid #AEAEAE;
+  border-radius: 3px;
+  background: #222222;
+  font-size: 31px;
+  font-weight: bold;
+  display: inline-block;
+  line-height: 0px;
+  padding: 11px 3px;
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  z-index: 1002;
+  opacity: 0.9;
+}
+
+.boxclose:before {
+  content: "×";
+}
+
+#fade:hover ~ #boxclose {
+  display:none;
+}
+
+.test:hover ~ .test2 {
+  display: none;
+}
 /*--//contact--*/
 /*# sourceMappingURL=style-freedom.css.map */
