--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -20465,7 +20465,7 @@ button.owl-next {
 
 /*--//search--*/
 .breadcrumb-bg-about {
-  background: url(../images/S12.jpg) no-repeat top;
+  background: url(assets/images/S12.jpg) no-repeat top;
   background-size: cover;
   background-size: cover;
   position: relative;
